Site with Nav working

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,8 +1,8 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-$kaldi-red: #FD461E
-$kaldi-red-invert: #fff
+$kaldi-red: #267699
+$kaldi-red-invert: #994926
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
