Got some kind of background going.

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -3,11 +3,14 @@
 // Config vars
 $kaldi-red: #267699
 $kaldi-red-invert: #994926
+$off-white: #f2f2f2
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
+$link: $kaldi-red
 
 .content .taglist
+  background: $off-white;
   list-style: none
   margin-bottom: 0
   margin-left: 0
@@ -21,6 +24,12 @@ $primary-invert: $kaldi-red-invert
     padding: 0 2rem 1rem 0
     margin-bottom: 1.5rem
     margin-top: 0
+
+.bg-image
+  position: unset !important;
+
+.section
+  background: $off-white;
 
 .pagination .navbar
 	justify-content: center
