--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,7 +10,7 @@ $primary-invert: $kaldi-red-invert
 $link: $kaldi-red
 
 .content .taglist
-  background: $off-white;
+  background: $off-white
   list-style: none
   margin-bottom: 0
   margin-left: 0
@@ -28,8 +28,8 @@ $link: $kaldi-red
 .bg-image
   position: unset !important;
 
-.section
-  background: $off-white;
+.section .columns
+  background: $off-white
 
 .pagination .navbar
 	justify-content: center
